# yt-to-jellyfin

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  app.py  docker-compose.yml  download_playlist.sh  entrypoint.sh  example.sh  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  run_tests.py  test_docker.sh  yt-dlp
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: docker-build.yml  release.yml  run-tests.yml
config/: config.yml
docs/: TMDB_METADATA_PLAN.md  mock_ui.js
tests/: test_additional.py  test_api.py  test_basic.py  test_config_validation.py  test_download_commands.py  test_episode_detection.py  test_integration.py  test_jellyfin.py  test_job_management.py  test_media_processing.py  test_movie.py  test_playlist_ops.py  test_subscriptions.py
tests/core/: test_process_music_job.py
tests/jobs/: test_create_music_job.py
tests/media/: test_prepare_music_tracks.py
tests/web/: test_frontend.py  test_frontend_integration.py
tubarr/: config.py  core.py  episode_detection.py  episodes.py  jellyfin.py  jobs.py  media.py  playlist.py  subscriptions.py  tmdb.py  tvdb.py  utils.py  web.py
web/static/: script.js  style.css
web/templates/: index.html
